--- a/package.json
+++ b/package.json
@@ -28,4 +28,4 @@
   }
 }
 
-"homepage": "https://wjsnwsjnsjowsjswjo.github.io/appname"
+"homepage": "https://wjsnwsjnsjowsjswjo.github.io/e-plantShopping"
