--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "vite": "^5.2.0"
   }
 }
-
-"homepage": "https://wjsnwsjnsjowsjswjo.github.io/e-plantShopping"
+{
+"homepage": "https://wjsnwsjnsjowsjswjo.github.io/e-plantShopping",
+"name": "PLANT-WEBISTE",
+  "version": "0.1.0",
+  
